# Augur_Maestro

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
API_manual/uSmart/API_manual/: README.md  usmart-quote-base-openapi.zh-cn.md  usmart-quote-push-openapi.zh-cn.md  usmart-trade-openapi.zh-cn.md
API_manual/uSmart/申请资料/: ElectronicTradingAssessmentForm(TraditionalChinese).docx  RobustQuant_使用者手冊.docx  ~$bustQuant_使用者手冊.docx
backend/: README.md
cli/: README.md
codex-rules/: global-AGENTS.md  known-issues.md
codex-rules/rules/: broker-openapi-rules.md  codex-workflow.md  concurrency-resource-safety.md  data-research-rules.md  frontend-react-rules.md  git-workflow.md  language.md  markdown-docs.md  python-coding-rules.md  tool-failure.md  trading-safety-rules.md
configs/: README.md
docs/: 01-architecture.md  02-glossary.md  03-open-decisions.md  04-research-agent.md  05-technical-roadmap.md  06-data-source-roadmap.md  07-m1-engineering-design.md  08-m1-data-model.md  09-m1-kernel-interfaces.md  README.md
docs/00-project/: 01-architecture.md  03-open-decisions.md  05-technical-roadmap.md
docs/10-research-data/: 04-research-agent.md  06-data-source-roadmap.md
docs/20-m1/: 07-m1-engineering-design.md  08-m1-data-model.md  09-m1-kernel-interfaces.md  10-m1-scope.md  11-m1-implementation-plan.md  12-m1-api-cli-contract.md  13-m1-service-specs.md
docs/30-trading/: 14-trading-safety-spec.md  17-yingli-openapi-reference.md  18-broker-trading-gateway-design.md  19-usmart-openapi-call-design.md
docs/40-ops/: 15-observability-audit-spec.md
docs/architecture/: glossary.md  open-decisions.md  overview.md  trading-safety.md
docs/backend/: engineering-design.md  observability-audit.md
docs/backend/api/: api-cli-contract.md
docs/backend/clients/: usmart-openapi-api-manual.md  usmart-openapi-call-design.md  usmart-readonly-integration-runbook.md  yingli-openapi-reference.md
docs/backend/data/: data-model.md  data-source-roadmap.md
docs/backend/kernel/: kernel-interfaces.md
docs/backend/services/: research-agent.md  service-specs.md
docs/backend/trading/: broker-gateway-audit-events.yaml  broker-gateway-error-codes.yaml  broker-gateway-raw-record-profile.yaml  broker-trading-gateway.md  trading-status-control.md
docs/frontend/: console-spec.md
docs/project-progress/: implementation-plan.md  m1-scope.md  technical-roadmap.md
rq_core/broker_kernel/: __init__.py  contracts.py  gateway.py
rq_core/broker_kernel/miniqmt/: __init__.py  adapter.py
rq_core/broker_kernel/usmart/: __init__.py  adapter.py  client.py
rq_core/quotation_kernel/: __init__.py  gateway.py
scripts/quality/: markdown_docs_check.py  trading_safety_static_check.py
src/backend/: README.md
src/cli/: README.md
src/rq_core/: __init__.py
tests/: test_smoke.py  test_trading_gateway.py  test_usmart_trade_error_code_extraction.py
(+34 files in other folders)
