[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "augur_maestro"
version = "0.1.0"
description = "Augur_Maestro research and trading safety kernel."
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5,<2",
    "mypy>=1.13,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=4.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=5.0,<7",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rq_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=rq_core",
    "--cov-report=term-missing",
    # 临时降为 0：M1 broker/oms/risk 等 kernel 尚未实现，tests/ 只有 smoke 桩；
    # 待 M1 实现到位、补真测试后调回 60。
    "--cov-fail-under=0",
]

[tool.coverage.run]
branch = true
source = ["rq_core"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]
ignore = [
    # 项目文档、注释和用户可见错误信息默认使用中文标点。
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# pytest 风格测试允许使用裸 assert；项目 ruff 未 select S101，此条同时兼容更严格的全局 hook ruleset。
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
packages = ["rq_core"]
mypy_path = "src"
strict = true
warn_unused_configs = true
show_error_codes = true
